# app/internal/controller/http/user/change.go
@@ -6,7 +6,8 @@ import (
 	"fmt"
 	"net/http"
 
-	"balance-service/app/internal/controller/http/v1/user/dto"
+	"balance-service/app/internal/controller/http/httputils"
+	"balance-service/app/internal/controller/http/user/dto"
 	"balance-service/app/pkg/errors"
 	"go.uber.org/zap"
 )
@@ -19,25 +20,25 @@ import (
 // @Produce      json
 // @Param        input body 	dto.ChangeBalanceIN		false 	"User ID, Change amount and Description"
 // @Success      200  {object}  dto.ChangeBalanceOUT
-// @Failure      400  {object}  dto.Error
-// @Failure      422  {object}  dto.Error
-// @Failure      500  {object}  dto.Error
+// @Failure      400  {object}  httputils.Error
+// @Failure      422  {object}  httputils.Error
+// @Failure      500  {object}  httputils.Error
 // @Router       /user/change [patch]
 func (h *handler) ChangeBalance(w http.ResponseWriter, r *http.Request) {
+
+	//r.Context().Value("logger").(*zap.Logger).Info("/change: change balance")
 	var change dto.ChangeBalanceIN
 
 	// decode body
 	defer r.Body.Close() // ignore error
 	if err := json.NewDecoder(r.Body).Decode(&change); err != nil {
-		dto.JSONError(w, http.StatusBadRequest, fmt.Errorf("invalid request body: %w", err))
-
+		_ = httputils.NewError(w, http.StatusBadRequest, fmt.Errorf("invalid request body: %w", err))
 		return
 	}
 
 	// validate struct
 	if err := change.Validate(); err != nil {
-		dto.JSONError(w, http.StatusBadRequest, err)
-
+		_ = httputils.NewError(w, http.StatusBadRequest, err)
 		return
 	}
 
@@ -49,9 +50,9 @@ func (h *handler) ChangeBalance(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		if internal, ok := errors.ToInternal(err); ok {
 			h.logger.Error("/change: change balance", zap.Error(err), zap.Int64("user_id", change.UserID), zap.Int64("amount", change.Amount))
-			dto.JSONError(w, http.StatusInternalServerError, internal)
+			_ = httputils.NewError(w, http.StatusInternalServerError, internal)
 		} else {
-			dto.JSONError(w, http.StatusUnprocessableEntity, err)
+			_ = httputils.NewError(w, http.StatusUnprocessableEntity, err)
 		}
 
 		return
@@ -59,8 +60,8 @@ func (h *handler) ChangeBalance(w http.ResponseWriter, r *http.Request) {
 
 	// // encode response
 
-	if err = dto.JSONResponse(w, dto.ChangeBalanceOUT{Ok: true}); err != nil {
+	if err = httputils.NewResponse(w, dto.ChangeBalanceOUT{Ok: true}); err != nil {
 		h.logger.Error("/change: encode response", zap.Error(err))
-		dto.JSONError(w, http.StatusInternalServerError, err)
+		_ = httputils.NewError(w, http.StatusInternalServerError, err)
 	}
 }
