# app/internal/controller/http/user/handler.go
@@ -24,7 +24,7 @@ func New(logger logger.Logger, balanceService balance.Service) api.Handler {
 		//
 		logger: logger,
 		//
-		timeout: time.Second,
+		timeout: time.Second * 5,
 	}
 }
 
@@ -36,9 +36,6 @@ func (h *handler) Handler() http.Handler {
 	//
 	user.PATCH("/change", wrap(h.ChangeBalance))
 	user.POST("/transfer", wrap(h.TransferBalance))
-	//
-	user.POST("/block", wrap(h.BlockBalance))
-	user.POST("/unblock", wrap(h.UnblockBalance))
 
 	return user
 }
